clusters/armadillo/istio/for-demo-2/bison-color-svc.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: bison-color-svc
spec:
  hosts:
    - color-svc.bison-offerings.global
    # - color-svc.bison-offerings.bison.global # Can be anything, as long as appropriate EnvoyFilter is in place on target cluster
  location: MESH_INTERNAL
  exportTo:
    - "*" # Temporarily set this to all namespaces
  ports:
    - name: http-bison
      number: 8800
      protocol: http
  resolution: STATIC
  addresses:
    - 240.0.0.2
  endpoints:
    - address: 172.18.0.1
      network: external
      ports:
        http-bison: 32022
    - address: 10.96.118.187
      ports:
        http-bison: 15443
---
# VirtualService definition on Bison side won't be able to handle the chaos setup.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bison-color-svc-routing
spec:
  hosts:
    - color-svc.bison-offerings.global
    # - color-svc.bison-offerings.bison.global
    - color-svc.bison-offerings.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.bison-offerings.global
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400

    # Default routing
    - route:
        - destination:
            host: color-svc.bison-offerings.global

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bison-color-svc-routing-external
spec:
  hosts:
    - "*"
  gateways:
    # Traffic handling for external IngressGateway mapping
    - istio-system/armadillo-external-ingressgateway
  http:
    - match:
        - uri:
            prefix: /bison
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.bison-offerings.global
            port:
              number: 8800
