clusters/armadillo/istio/for-demo-2/bison-httpbin.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: bison-httpbin
spec:
  hosts:
    - httpbin.bison-offerings.global
    # - httpbin.bison-offerings.bison.global # Can be anything, as long as appropriate EnvoyFilter is in place on target cluster
  location: MESH_INTERNAL
  exportTo:
    - "*" # Temporarily set this to all namespaces
  ports:
    - name: http-bison
      number: 8000
      protocol: http
  resolution: STATIC
  addresses:
    - 240.0.0.1
  endpoints:
    - address: 172.18.0.1
      network: external
      ports:
        http-bison: 32022
    - address: 10.96.84.243
      ports:
        http-bison: 15443
---
# VirtualService definition on Bison side won't be able to handle the chaos setup.
# TODO: Check if this can be handled at IngressGateway instead
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bison-httpbin-routing
spec:
  hosts:
    - httpbin.bison-offerings.global
    # - httpbin.bison-offerings.bison.global
    - httpbin.bison-offerings.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /status/418
      route:
        - destination:
            host: httpbin.bison-offerings.global
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
    # Default routing
    - route:
        - destination:
            host: httpbin.bison-offerings.global
